[tool.poetry]
name = "ns_trcd_runner"
version = "0.2.0"
description = ""
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.3"
pyvisa = "^1.10.1"
pyserial = "^3.4"
scipy = "^1.4.1"
click = "^7.1.2"
notifiers = "^1.2.1"
nidaqmx = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
trcd = "ns_trcd_runner.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
